--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
                     
                     <div class="stat-card">
                         <div class="stat-icon stocks">
-                            <i class="fas fa-chart-candlestick"></i>
+                            <i class="fas fa-chart-line"></i>
                         </div>
                         <div class="stat-info">
                             <span class="stat-value" id="totalStockAlerts">0</span>
@@ -305,11 +305,9 @@
                     <select id="platformSelect" required class="form-control" onchange="updateUrlPlaceholder()">
                         <option value="">Select a platform...</option>
                         <option value="amazon">🛒 Amazon</option>
-                        <option value="alibaba">🏭 Alibaba</option>
                         <option value="ebay">🏷️ eBay</option>
-                        <option value="walmart">🏪 Walmart</option>
-                        <option value="flipkart">🛍️ Flipkart</option>
                         <option value="etsy">🎨 Etsy</option>
+                        <option value="walmart">🏪 Walmart</option>
                         <option value="storenvy">🏬 Storenvy</option>
                     </select>
                 </div>
