--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PriceTracker - Smart Price Monitoring</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>TagTracker - Smart Price Monitoring</title>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="auth-header">
                 <div class="logo">
                     <i class="fas fa-chart-line"></i>
-                    <h1>PriceTracker</h1>
+                    <h1>TagTracker</h1>
                 </div>
                 <p class="auth-subtitle">Smart price monitoring for e-commerce, Roblox, and stocks</p>
             </div>
@@ -133,7 +133,7 @@
         <nav class="navbar">
             <div class="nav-brand">
                 <i class="fas fa-chart-line"></i>
-                <span>PriceTracker</span>
+                <span>TagTracker</span>
             </div>
             
             <div class="nav-menu">
@@ -350,7 +350,7 @@
                 <div class="settings-section">
                     <h3>
                         <i class="fas fa-info-circle"></i>
-                        About PriceTracker
+                        About TagTracker
                     </h3>
                     <div class="about-content">
                         <p><strong>Version:</strong> 2.0.0</p>
