--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
             <div class="auth-header">
                 <div class="logo">
                     <div class="logo-icon">
-                        <img src="images/logo.png" alt="TagTracker Logo" width="40" height="40">
+                        <img src="logo-base64 auth-logo" alt="TagTracker Logo" width="40" height="40">
                     </div>
                     <h1>TagTracker</h1>
                 </div>
@@ -135,7 +135,7 @@
         <nav class="navbar">
             <div class="nav-brand">
                 <div class="logo-icon navbar-logo">
-                    <img src="images/logo.png" alt="TagTracker Logo" width="32" height="32"> 
+                    <img src="logo-base64 navbar-logo" alt="TagTracker Logo" width="32" height="32"> 
                 </div>
                 <span>TagTracker</span>
             </div>
